# Techtest

./: .gitignore  CMakelists.txt  Makefile  README.MD
schema/: property.bfbs  property.fbs  property_generated.h
src/: CMakeLists.txt  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/property_tree/: CMakeLists.txt  property_tree.cpp  property_tree.h
src/tcp_service/: CMakeLists.txt  tcp_conn.cpp  tcp_conn.h
tests/: CMakelists.txt  test_property_tree.cpp  utils.cpp  utils.h
